@@ -9,6 +9,7 @@
  * fix potential infinite loop in get_count (CASSANDRA-4833)
  * fix compositeType.{get/from}String methods (CASSANDRA-4842)
  * (CQL) fix CREATE COLUMNFAMILY permissions check (CASSANDRA-4864)
+ * Fix DynamicCompositeType same type comparison (CASSANDRA-4711)
 
 
 1.1.6
